[package]
name = "liquidation"
version = "0.1.0"
authors = ["Blockwave <dev@propwave.io>", "Near Inc <hello@near.org>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
near-sdk = "3.1.0"
uint = { version = "0.8.3", default-features = false }
flux-sdk = { git = "https://github.com/fluxprotocol/flux-sdk-rs.git", rev="95df735a58f71859e284e0c499362b3bfd03bf57" }

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
debug = false
panic = "abort"
# Opt into extra safety checks on arithmetic operations https://stackoverflow.com/a/64136471/249801
overflow-checks = true
