[package]
name = "oracle"
version = "0.1.0"
authors = ["Blockwave <dev@blockwave.io>", "Flux Contributors <contributors@flux.xyz>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = "3.1.0"
flux-sdk = { git = "https://github.com/fluxprotocol/flux-sdk-rs.git", rev="95df735a58f71859e284e0c499362b3bfd03bf57" }
serde = "1.0.118"